--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -84,9 +84,9 @@
 
       <div class="flex-1 flex flex-col overflow-hidden">
         <header
-          class="flex justify-between items-center py-4 px-6 bg-white border-b border-notion-200"
+          class="flex justify-center items-center py-4 px-6 bg-white border-b border-notion-200"
         >
-          <div class="flex items-center">
+          <div class="flex-1 flex justify-start">
             <button
               @click="sidebarOpen = !sidebarOpen"
               class="text-notion-500 focus:outline-none lg:hidden"
@@ -94,10 +94,10 @@
               <i class="fas fa-bars"></i>
             </button>
           </div>
-          <div class="flex items-center space-x-4">
-            <div class="relative">
+          <div class="flex-1 flex justify-center">
+            <div class="relative w-full max-w-lg">
               <input
-                class="bg-notion-100 text-notion-800 py-2 px-4 rounded-lg focus:outline-none focus:ring-2 focus:ring-notion-300 w-64"
+                class="bg-notion-100 text-notion-800 py-2 px-4 rounded-full focus:outline-none focus:ring-2 focus:ring-notion-300 w-full"
                 type="text"
                 placeholder="Search files..."
               />
@@ -105,6 +105,8 @@
                 <i class="fas fa-search"></i>
               </span>
             </div>
+          </div>
+          <div class="flex-1 flex justify-end space-x-4">
             <button
               onclick="openModal()"
               class="bg-notion-800 text-white px-4 py-2 rounded-lg hover:bg-notion-700 transition duration-200"
