Maintenance of file structure

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -79,7 +79,19 @@
         <div class="flex items-center justify-center mt-8">
           <div class="flex items-center">
             <i class="fas fa-elephant text-notion-800 text-2xl mr-2"></i>
-            <span class="text-notion-800 text-2xl font-semibold">Tusk</span>
+            <a href="/">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 100 125"
+                width="100"
+                height="100"
+              >
+                <path
+                  d="M45.997,95h-0.388c-12.259,0-22.232-9.973-22.232-22.232V19.861C23.377,11.667,30.043,5,38.238,5h23.524    c8.194,0,14.861,6.667,14.861,14.861v27.363c0,5.94-4.833,10.773-10.773,10.773H55.043c-5.94,0-10.773-4.833-10.773-10.773V31.421    c0-1.664,1.349-3.013,3.013-3.013s3.013,1.349,3.013,3.013v15.803c0,2.618,2.13,4.748,4.748,4.748H65.85    c2.618,0,4.748-2.13,4.748-4.748V19.861c0-4.872-3.963-8.835-8.835-8.835H38.238c-4.872,0-8.835,3.963-8.835,8.835v52.907    c0,8.936,7.27,16.206,16.206,16.206h0.388c8.936,0,16.206-7.27,16.206-16.206v-5.04c0-1.664,1.349-3.013,3.013-3.013    s3.013,1.349,3.013,3.013v5.04C68.228,85.027,58.255,95,45.997,95z"
+                />
+                <circle cx="36.801" cy="32.149" r="2.733" />
+              </svg>
+            </a>
           </div>
         </div>
         <nav class="mt-10">
@@ -161,7 +173,6 @@
 
         <main class="flex-1 overflow-x-hidden overflow-y-auto bg-notion-50">
           <div class="container mx-auto px-6 py-8">
-
             <!-- Loading Bar -->
             <div id="loading-bar" class="loading-bar mb-4"></div>
 
