Optimizations to uploads using bulk ops

--- a/web/templates/search_results.html
+++ b/web/templates/search_results.html
@@ -1,3 +1,4 @@
+{% comment %} search_results.html {% endcomment %}
 <div class="search-results">
   <h4 class="text-xl font-semibold mb-2">Search Results for: {{ .query }}</h4>
   <div class="bg-notion-100 p-4 rounded-md">
