initial user login and signup done

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -161,6 +161,7 @@
             <button class="btn btn-secondary">
               <i class="fas fa-share mr-2"></i>Share
             </button>
+            <a href="/logout" class="btn btn-logout">Logout</a>
           </div>
         </header>
 
