--- a/web/templates/error.html
+++ b/web/templates/error.html
@@ -1,4 +1,3 @@
-{% comment %} error.html {% endcomment %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,7 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
       rel="stylesheet"
     />
-    <link href="/static/css/your-custom-styles.css" rel="stylesheet" />
+    <link href="/static/css/styles.css" rel="stylesheet" />
   </head>
   <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div
